Sympred  z-index fix

--- a/web/sympred.css
+++ b/web/sympred.css
@@ -21,6 +21,7 @@
 /* TODO add two divs one with 0.7 and one with 1.0 w/o  bg and text. See-through background AND  eligible text!!  */
 	opacity: 0.7;
 	border-radius:  8px;
+	z-index:1000;
 }
 
 .suggest ul {
